--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
-baseurl: "/newrepo" # important for project site
-url: "https://username.github.io"
+baseurl: "/gaisce-portfolio" # important for project site
+url: "https://mark-mccormack.github.io"
 
 title: Mark P. McCormack GAISCE Portfolio # the main title
 
